<resources>
    <string name="app_name">Unicalendar</string>
    <string name="title_activity_add_req">AddReq</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">TODO_LISTVIEW</string>
    <string name="add_subject">Add subject</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="upcoming">Upcoming</string>
    <string name="calendar">Calendar</string>
    <string name="bad_string">this is not supposed to be seen :(</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="add_requirement">Add requirement</string>
    <string name="addReqTitle">Add a subject</string>
    <string name="hardiness">Hardiness</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_a_requ">Add a requirement</string>
    <string name="asd">asd</string>
    <string name="veryeasy">Very easy</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="hard">Hard</string>
    <string name="veryhard">Very hard</string>
    <string-array name="hardiness_spinner_items">
        <item name="veryeasy">Very easy</item>
        <item name="easy">Easy</item>
        <item name="moderate">Moderate</item>
        <item name="hard">Hard</item>
        <item name="veryhard">Very hard</item>
    </string-array>
    <string-array name="types">
        <item name="ZH">Test</item>
        <item name="Konzi">Consultation</item>
        <item name="HW">Homework</item>
        <item name="Exam">Exam</item>
    </string-array>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="information">Information</string>
    <string name="infotext">This application is made as an university homework.
        Author: Kurovszky Robin - JQXZC8
    </string>
    <string-array name="drawerItems">
        <item name="add_subject">Add subject</item>
        <item name="properties">Settings</item>
        <item name="info">Info</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="protocols">
        <item>REST</item>
        <item>gRPC</item>
        <item>SOAP</item>
    </string-array>
    <string-array name="hardiness_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notification">Notification</string>
    <string name="turnonsummary">Turns on the notifications</string>
    <string name="timeSummary">Time to send the notification</string>
    <string name="soundTitle">Notification Sound</string>
    <string name="soundSum">Sound that will played to notify you</string>
    <string name="set">Ok</string>
    <string name="institute">Institute</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="timeToNotify">Time</string>
    <string name="hardiness_settings">Hardiness settings</string>
    <string name="hardiness_sum">Days before the requirement to send notification</string>
    <string name="notificationTitle">It\'s time to begin the task!</string>
    <string name="from">" from "</string>
    <string name="at">" at "</string>
    <string name="its">". It's "</string>
    <string name="set_the_date">Set the date</string>
    <string name="set_the_time">Set the time</string>
    <string name="title_activity_login">Login - UniCalendar</string>
    <string name="title_activity_institute_picker">InstitutePicker</string>
    <string name="title_activity_register">Register - UniCalendar</string>
    <string name="title_activity_add_institute">AddInstitute</string>
    <string name="title_activity_select_subject">SelectSubject</string>
    <string name="network_protocol">Network Protocol</string>
    <string name="switch_proto">Switch between protocols</string>
    <string name="choose_proto">Choose the protocol</string>
    <string name="username_login">Username</string>
    <string name="password">Password</string>
    <string name="usericon">userIcon</string>
    <string name="login_hint">Login or register to use the application</string>
    <string name="submit_login">login</string>
    <string name="not_a_member_yet_register_here">not a member yet? register here</string>
    <string name="register_submit">register</string>
    <string name="register_hint">Register with a new username, your real name, set a password, and pick your institute!</string>
    <string name="real_name">Real name</string>
    <string name="add_institute_hint">Type in your institute name to add it to the application!</string>
    <string name="institute_name">Institute name</string>
    <string name="submit_add_institute">Add Institute</string>
    <string name="auth_fail">Failed to authenticate! Maybe wrong username or password!</string>
    <string name="server_fail">Cannot communicate with the backend! Is the server up?</string>
    <string name="register_fail_username_exists">Username is taken by another user! Choose another one.</string>
    <string name="default_fail_message">Something went wrong, try again later!</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="institute_name_cannot_be_empty">Institute name cannot be empty!</string>
    <string name="subject_not_found_on_server">Cannot find subject on the server!</string>
    <string name="no_error">Everything is fine, the sun is shining, the sky is blue, and the grass is green! :)</string>
    <string name="subject">Subject</string>
    <string name="add_subject_hint">Select a subject to add a requirement to it! If you can\'t find the subject, you can add one.</string>
    <string name="cant_find_institute_add_one_here">cant find institute? add one here</string>
    <string name="cant_find_subject_add_one_here">cant find subject? add one here</string>
    <string name="submit">submit</string>
    <string name="enter_the_name_of_the_new_subject">Enter the name of the new subject! Click on the add requirement button, to add requirements.</string>
    <string name="requirements">Requirements</string>
    <string name="select_the_type_hardiness_date_and_time_for_the_new_requirement_after_finished_select_the_check_mark">Select the type, hardiness, date and time, for the new requirement! After finished, select the check mark!</string>

</resources>
