<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content" android:layout_width="match_parent">

    <PreferenceCategory
        android:title="@string/notification"
        android:key="notification_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SwitchPreference
            android:key="notification"
            android:summary="@string/turnonsummary"
            android:title="@string/notifications"
            android:defaultValue="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <kurovszky.robin.unicalendar.view.TimePreference
            android:key="notification_time"
            android:dependency="notification"
            android:summary="@string/timeSummary"
            android:title="@string/timeToNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </kurovszky.robin.unicalendar.view.TimePreference>
        <RingtonePreference
            android:key="notification_sound"
            android:dependency="notification"
            android:summary="@string/soundSum"
            android:title="@string/soundTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </RingtonePreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/network_protocol"
        android:key="notification_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListPreference
            android:key="networking_protocol"
            android:summary="@string/switch_proto"
            android:title="@string/choose_proto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/protocols"
            android:entryValues="@array/protocols"
            android:defaultValue="2"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hardiness_settings"
        android:key="hardiness_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ListPreference
        android:key="very_easy_days"
        android:summary="@string/hardiness_sum"
        android:title="@string/veryeasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/hardiness_days"
        android:entryValues="@array/hardiness_days"
        android:defaultValue="1"
        />
        <ListPreference
            android:key="easy_days"
            android:summary="@string/hardiness_sum"
            android:title="@string/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/hardiness_days"
            android:entryValues="@array/hardiness_days"
            android:defaultValue="3"
            />
        <ListPreference
            android:key="moderate_days"
            android:summary="@string/hardiness_sum"
            android:title="@string/moderate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/hardiness_days"
            android:entryValues="@array/hardiness_days"
            android:defaultValue="5"
            />
        <ListPreference
            android:key="hard_days"
            android:summary="@string/hardiness_sum"
            android:title="@string/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/hardiness_days"
            android:entryValues="@array/hardiness_days"
            android:defaultValue="7"
            />
        <ListPreference
            android:key="very_hard_days"
            android:summary="@string/hardiness_sum"
            android:title="@string/veryhard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/hardiness_days"
            android:entryValues="@array/hardiness_days"
            android:defaultValue="9"
            />
    </PreferenceCategory>
</PreferenceScreen>