<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kurovszky.robin.unicalendar.activity.InfoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/usericon"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:tint="@color/accent"
        android:layout_gravity="center"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint"
            style="@style/ListTextBold"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_text_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:gravity="start"
            android:hint="@string/username_login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_text_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
>
    <Button
        android:id="@+id/submit_input"
        android:layout_width="wrap_content"

        android:background="@color/primary"
        android:text="@string/submit_login"

        android:layout_margin="3dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:textColor="@color/icons" />

    <Button
        android:id="@+id/register_start"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:layout_gravity="end"
        android:text="@string/not_a_member_yet_register_here"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:textColor="@color/icons" />

    </LinearLayout>
</LinearLayout>